--- a/index.html
+++ b/index.html
@@ -29,34 +29,56 @@
 				<div class="slide-caption">
 					<div class="row">
 						<div class="col s12">
-							<p class="title">text here</p>
-							<p class="desc">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, tenetur repudiandae reiciendis dignissimos tempore, eos tempora ipsa! Provident cumque, delectus, mollitia ex itaque minima ea doloribus suscipit facere, error molestias.
-							</p>
+							<div class="description">
+								<p class="title">text here</p>
+								<p class="desc">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, tenetur repudiandae reiciendis dignissimos tempore, eos tempora ipsa! Provident cumque, delectus, mollitia ex itaque minima ea doloribus suscipit facere, error molestias.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<ul class="header-slider">
 				<li>
-					<img src="/images/sample1.jpg" alt="">
+					<img src="/images/pic01.jpg" alt="">
+					<div class="description">
+						<p class="title">title 1</p>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, corporis, culpa! Incidunt cupiditate sint laboriosam saepe minima id ullam ducimus eligendi dicta, in quidem, vitae blanditiis dolorum ad! Nihil, sit.</p>
+					</div>
+				</li>
+				<li>
+					<img src="/images/pic02.jpg" alt="">
+					<div class="description">
+						<p class="title">title 2</p>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, corporis, culpa! Incidunt cupiditate sint laboriosam saepe minima id ullam ducimus eligendi dicta, in quidem, vitae blanditiis dolorum ad! Nihil, sit.</p>
+					</div>
+				</li>
+				<li>
+					<img src="/images/pic03.jpg" alt="">
+					<div class="description">
+						<p class="title">title 3</p>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, corporis, culpa! Incidunt cupiditate sint laboriosam saepe minima id ullam ducimus eligendi dicta, in quidem, vitae blanditiis dolorum ad! Nihil, sit.</p>
+					</div>
+				</li>
+				<li>
+					<img src="/images/pic04.jpg" alt="">
+					<div class="description">
+						<p class="title">title 4</p>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, corporis, culpa! Incidunt cupiditate sint laboriosam saepe minima id ullam ducimus eligendi dicta, in quidem, vitae blanditiis dolorum ad! Nihil, sit.</p>
+					</div>
 				</li>
 				<li>
 					<img src="/images/sample1.jpg" alt="">
-				</li>
-				<li>
-					<img src="/images/sample1.jpg" alt="">
-				</li>
-				<li>
-					<img src="/images/sample1.jpg" alt="">
-				</li>
-				<li>
-					<img src="/images/sample1.jpg" alt="">
+					<div class="description">
+						<p class="title">title 5</p>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, corporis, culpa! Incidunt cupiditate sint laboriosam saepe minima id ullam ducimus eligendi dicta, in quidem, vitae blanditiis dolorum ad! Nihil, sit.</p>
+					</div>
 				</li>
 			</ul>
 		</div>
 	</header>
-	<aside class="active">
+	<aside>
 		<!-- this contains the navigations -->
 		<nav>
 			<div class="container">
@@ -239,26 +261,73 @@
 				<div class="row">
 					<div class="col s12">
 						<ul class="cards">
-
-							<?php for($i=0;$i<10;$i++){ ?>
 							<li class="card design01 z-depth-2">
-						    <div class="card-image waves-effect waves-block waves-light">
-						      <img class="activator" src="/images/profilePix.jpg">
-						    </div>
-						    <div class="card-content">
-						      <p class="name center-align">Elsa Bermudez</p>
-						      <p class="job center-align">Designer</p>
-						    </div>
-						    <div class="card-reveal">
-						      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-						      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-						    </div>
-						  </li>
-							<?php } ?>
-
+								<div class="card-image waves-effect waves-block waves-light">
+								  <img class="activator" src="/images/profilePix.jpg">
+								</div>
+								<div class="card-content">
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
+								</div>
+								<div class="card-reveal">
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+								</div>
+							</li>
+							<li class="card design01 z-depth-2">
+								<div class="card-image waves-effect waves-block waves-light">
+								  <img class="activator" src="/images/profilePix.jpg">
+								</div>
+								<div class="card-content">
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
+								</div>
+								<div class="card-reveal">
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+								</div>
+							</li>
+							<li class="card design01 z-depth-2">
+								<div class="card-image waves-effect waves-block waves-light">
+								  <img class="activator" src="/images/profilePix.jpg">
+								</div>
+								<div class="card-content">
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
+								</div>
+								<div class="card-reveal">
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+								</div>
+							</li>
+							<li class="card design01 z-depth-2">
+								<div class="card-image waves-effect waves-block waves-light">
+								  <img class="activator" src="/images/profilePix.jpg">
+								</div>
+								<div class="card-content">
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
+								</div>
+								<div class="card-reveal">
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+								</div>
+							</li>
+							<li class="card design01 z-depth-2">
+								<div class="card-image waves-effect waves-block waves-light">
+								  <img class="activator" src="/images/profilePix.jpg">
+								</div>
+								<div class="card-content">
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
+								</div>
+								<div class="card-reveal">
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+								</div>
+							</li>
 						</ul>
 					</div>
-
 				</div>
 			</div>
 		</section>
@@ -270,7 +339,7 @@
 					<div class="col m5 s12">
 						<h3>More about company</h3>
 						<p class="par">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quos qui temporibus, quod reiciendis architecto. Id alias ipsa unde quae corporis facere, quibusdam, debitis, porro dolorum inventore atque enim molestias?</p>
-						<p class="name right-align">-Eufemia Britania</p>
+						<p class="name right-align">-Jemuel Elimanco</p>
 					</div>
 					<div class="col m3 s12">
 						<h3>Keep Connected</h3>
@@ -286,11 +355,11 @@
 						</div>
 						<div class="contactInfoBlock">
 							<i class="material-icons">phone</i>
-							<p class="phone-number">09464561234</p>
+							<p class="phone-number">09433994613</p>
 						</div>
 						<div class="contactInfoBlock">
 							<i class="material-icons">email</i>
-							<p class="email">emailAddress@gmail.com</p>
+							<p class="email">jemuelpup@gmail.com</p>
 						</div>
 					</div>
 				</div>
@@ -300,7 +369,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col s12">
-						<p class="company left">2016 Sample here</p>
+						<p class="company left">2018 Sample here</p>
 						<p class="designer right">Designed by Jemuel Elimanco</p>
 					</div>
 				</div>
