Latest design update

--- a/products/3dboard/index.html
+++ b/products/3dboard/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-		<title>INNOMOTIF</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="/common/css/reset.css">
-		<link rel="stylesheet" href="/plugins/materialize-css/dist/css/materialize.min.css">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" href="/plugins/slick/slick.css">
-		<link rel="stylesheet" href="/plugins/slick/slick-theme.css">
-		<link rel="stylesheet" href="/common/css/cardDesigns.css">
-		<link rel="stylesheet" href="/common/css/style.css">
-		<link rel="stylesheet" href="/css/style.css">
+    <title>INNOMOTIF</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/common/css/reset.css">
+    <link rel="stylesheet" href="/plugins/materialize-css/dist/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/plugins/slick/slick.css">
+    <link rel="stylesheet" href="/plugins/slick/slick-theme.css">
+    <link rel="stylesheet" href="/common/css/cardDesigns.css">
+    <link rel="stylesheet" href="/common/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -135,7 +135,7 @@
 
 			<div class="parralax-text">
 				<div class="text-container">
-					<h3 class="title">Simplicity, Carried to an Extreme, Becomes Elegance</h2>
+					<h3 class="title">Simplicity, Carried to an Extreame, Becomes Elegance</h2>
 					<p>JOHN FRANKLIN</p>
 				</div>
 			</div>
@@ -145,133 +145,126 @@
 			<div class="container">
 				<div class="row">
 					<!-- products -->
-					<div class="col s12 m4-custom m4">
-						<div class="card custom01">
-							<div class="card-image">
-								<img src="/images/boardSample3d.jpg">
-								<span class="card-title">3D Board</span>
-							</div>
-							<div class="card-content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis necessitatibus nostrum, suscipit eaque. Expedita dolores blanditiis repellendus a veritatis dolore reiciendis animi consequatur voluptate fuga, assumenda quia ex impedit autem.</p>
-							</div>
-							<div class="card-action">
-								<a href="#">More</a>
-							</div>
-						</div>
-					</div>
-					<div class="col s12 m4-custom m4">
-						<div class="card custom01">
-							<div class="card-image">
-								<img src="/images/innoDecking.jpg">
-								<span class="card-title">Inno Decking</span>
-							</div>
-							<div class="card-content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur mollitia impedit ullam quas dicta totam dignissimos. Ipsa adipisci autem amet illum incidunt praesentium molestias? Saepe ad totam odio quidem officia!</p>
-							</div>
-							<div class="card-action">
-								<a href="#">More</a>
-							</div>
-						</div>
-					</div>
-					<div class="col s12 m4-custom m4">
-						<div class="card custom01">
-							<div class="card-image">
-								<img src="/images/YarnWovenCover.jpg">
-								<span class="card-title">Yarn Woven Cover</span>
-							</div>
-							<div class="card-content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque doloremque iusto eligendi! Officia quod numquam molestiae? Enim incidunt aperiam harum deserunt facere quibusdam possimus rerum officiis recusandae, pariatur vero doloremque?</p>
-							</div>
-							<div class="card-action">
-								<a href="#">More</a>
-							</div>
-						</div>
-					</div>
-					<div class="col s12 m4-custom m4">
-						<div class="card custom01">
-							<div class="card-image">
-								<img src="/images/turfAndArtificialGrass_03.jpg">
-								<span class="card-title">Turf and artificial Grass</span>
-							</div>
-							<div class="card-content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore dolor cupiditate laboriosam voluptatum explicabo, beatae, repudiandae maxime quo natus culpa, vel perferendis provident animi voluptatibus voluptas aliquam quasi? Cumque.</p>
-							</div>
-							<div class="card-action">
-								<a href="#">More</a>
-							</div>
-						</div>
-					</div>
-					<div class="col s12 m4-custom m4">
-						<div class="card custom01">
-							<div class="card-image">
-								<img src="/images/koberSoftLeatherPanel.jpg">
-								<span class="card-title">Kober Soft Leather Panel</span>
-							</div>
-							<div class="card-content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ratione error accusantium quos iste maiores culpa accusamus aut repudiandae porro quo delectus, at voluptatibus, expedita. Voluptatem culpa sint officia in.</p>
-							</div>
-							<div class="card-action">
-								<a href="#">More</a>
-							</div>
-						</div>
-					</div>
-					<!-- products -->
+					<div class="col s12 m4">
+	          <div class="card">
+	            <div class="card-image">
+	              <img src="/images/boardSample3d.jpg">
+	              <span class="card-title">3D Board</span>
+	            </div>
+	            <div class="card-content">
+	              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis necessitatibus nostrum, suscipit eaque. Expedita dolores blanditiis repellendus a veritatis dolore reiciendis animi consequatur voluptate fuga, assumenda quia ex impedit autem.</p>
+	            </div>
+	            <div class="card-action">
+	              <a href="#">More</a>
+	            </div>
+	          </div>
+	        </div>
+
+
+					<div class="col s12 m4">
+	          <div class="card">
+	            <div class="card-image">
+	              <img src="/images/innoDecking.jpg">
+	              <span class="card-title">Inno Decking</span>
+	            </div>
+	            <div class="card-content">
+	              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur mollitia impedit ullam quas dicta totam dignissimos. Ipsa adipisci autem amet illum incidunt praesentium molestias? Saepe ad totam odio quidem officia!</p>
+	            </div>
+	            <div class="card-action">
+	              <a href="#">More</a>
+	            </div>
+	          </div>
+	        </div>
+
+
+					<div class="col s12 m4">
+	          <div class="card">
+	            <div class="card-image">
+	              <img src="/images/YarnWovenCover.jpg">
+	              <span class="card-title">Yarn Woven Cover</span>
+	            </div>
+	            <div class="card-content">
+	              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque doloremque iusto eligendi! Officia quod numquam molestiae? Enim incidunt aperiam harum deserunt facere quibusdam possimus rerum officiis recusandae, pariatur vero doloremque?</p>
+	            </div>
+	            <div class="card-action">
+	              <a href="#">More</a>
+	            </div>
+	          </div>
+	        </div>
+
+
+					<div class="col s12 m4">
+	          <div class="card">
+	            <div class="card-image">
+	              <img src="/images/turfAndArtificialGrass_03.jpg">
+	              <span class="card-title">Turf and artificial Grass</span>
+	            </div>
+	            <div class="card-content">
+	              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore dolor cupiditate laboriosam voluptatum explicabo, beatae, repudiandae maxime quo natus culpa, vel perferendis provident animi voluptatibus voluptas aliquam quasi? Cumque, temporibus!</p>
+	            </div>
+	            <div class="card-action">
+	              <a href="#">More</a>
+	            </div>
+	          </div>
+	        </div>
+
+
+					<div class="col s12 m4">
+	          <div class="card">
+	            <div class="card-image">
+	              <img src="/images/koberSoftLeatherPanel.jpg">
+	              <span class="card-title">Kober Soft Leather Panel</span>
+	            </div>
+	            <div class="card-content">
+	              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ratione error accusantium quos iste maiores culpa accusamus aut repudiandae porro quo delectus, at voluptatibus, expedita. Voluptatem culpa sint officia in.</p>
+	            </div>
+	            <div class="card-action">
+	              <a href="#">More</a>
+	            </div>
+	          </div>
+	        </div>
+
+
+
+	        <!-- products -->
 				</div>
 			</div>
 		</section>
-		<div class="parallax-container">
-			<div class="parallax black-bg">
-				<img class="opac07" src="/images/pic02.jpg" alt="">
-			</div>
-			<div class="parralax-text">
-				<div class="text-container">
-					<h3 class="title">Art is anything you can get away with.</h2>
-					<p>Marshal McLuhan</p>
-				</div>
-			</div>
-		</div>
 		<section class="samples">
 			<h2>Samples</h2>
 				<div class="gallery">
 					<div class="grid">
-							<div class="grid-sizer"><img src="/images/pic01.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic02.jpg" alt=""></div>
-							<div class="grid-item grid-item--width2 grid-item--height2"><img src="/images/pic03.jpg" alt=""></div>
-							<div class="grid-item grid-item--height3"><img src="/images/pic04.jpg" alt=""></div>
-							<div class="grid-item grid-item--height2"><img src="/images/pic05.jpg" alt=""></div>
-							<div class="grid-item grid-item--width3"><img src="/images/pic06.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic07.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic08.jpg" alt=""></div>
-							<div class="grid-item grid-item--height2"><img src="/images/pic09.jpg" alt=""></div>
-							<div class="grid-item grid-item--width2 grid-item--height3"><img src="/images/pic10.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic10.jpg" alt=""></div>
-							<div class="grid-item grid-item--height2"><img src="/images/pic11.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic12.jpg" alt=""></div>
-							<div class="grid-item grid-item--width2 grid-item--height2"><img src="/images/pic13.jpg" alt=""></div>
-							<div class="grid-item grid-item--width2"><img src="/images/pic01.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic02.jpg" alt=""></div>
-							<div class="grid-item grid-item--height2"><img src="/images/pic03.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic04.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic05.jpg" alt=""></div>
-							<div class="grid-item grid-item--height3"><img src="/images/pic06.jpg" alt=""></div>
-							<div class="grid-item grid-item--height2"><img src="/images/pic07.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic08.jpg" alt=""></div>
-							<div class="grid-item"><img src="/images/pic09.jpg" alt=""></div>
-							<div class="grid-item grid-item--height2"><img src="/images/pic10.jpg" alt=""></div>
+						  <div class="grid-sizer"><img src="/images/pic01.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic02.jpg" alt=""></div>
+						  <div class="grid-item grid-item--width2 grid-item--height2"><img src="/images/pic03.jpg" alt=""></div>
+						  <div class="grid-item grid-item--height3"><img src="/images/pic04.jpg" alt=""></div>
+						  <div class="grid-item grid-item--height2"><img src="/images/pic05.jpg" alt=""></div>
+						  <div class="grid-item grid-item--width3"><img src="/images/pic06.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic07.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic08.jpg" alt=""></div>
+						  <div class="grid-item grid-item--height2"><img src="/images/pic09.jpg" alt=""></div>
+						  <div class="grid-item grid-item--width2 grid-item--height3"><img src="/images/pic10.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic0.jpg" alt=""></div>
+						  <div class="grid-item grid-item--height2"><img src="/images/pic11.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic12.jpg" alt=""></div>
+						  <div class="grid-item grid-item--width2 grid-item--height2"><img src="/images/pic13.jpg" alt=""></div>
+						  <div class="grid-item grid-item--width2"><img src="/images/pic01.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic02.jpg" alt=""></div>
+						  <div class="grid-item grid-item--height2"><img src="/images/pic03.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic04.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic05.jpg" alt=""></div>
+						  <div class="grid-item grid-item--height3"><img src="/images/pic06.jpg" alt=""></div>
+						  <div class="grid-item grid-item--height2"><img src="/images/pic07.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic08.jpg" alt=""></div>
+						  <div class="grid-item"><img src="/images/pic09.jpg" alt=""></div>
+						  <div class="grid-item grid-item--height2"><img src="/images/pic10.jpg" alt=""></div>
 					</div>
 				</div>
 		</section>
-		<div class="parallax-container">
-			<div class="parallax black-bg">
-				<img class="opac07" src="/images/pic13.jpg" alt="">
-			</div>
-			<div class="parralax-text">
-				<div class="text-container">
-					<h3 class="title">Alone we can do so little; together we can do so much.</h2>
-					<p>Helen Keller</p>
-				</div>
-			</div>
-		</div>
+		<section class="location pb0">
+			<h2>Location</h2>
+			<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=hobart%20commercial%20center%20zabarte%20road&key=AIzaSyD2i_ONq7PGYUam88owkBh3nt2IQBUpjUk" allowfullscreen></iframe>
+		</section>
 		<section class="designers">
 			<h2>The Team</h2>
 			<div class="container">
@@ -280,77 +273,73 @@
 						<ul class="cards">
 							<li class="card design01 z-depth-2">
 								<div class="card-image waves-effect waves-block waves-light">
-									<img class="activator" src="/images/profilePix.jpg">
+								  <img class="activator" src="/images/profilePix.jpg">
 								</div>
 								<div class="card-content">
-									<p class="name center-align">Jane Doe</p>
-									<p class="job center-align">Designer</p>
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
 								</div>
 								<div class="card-reveal">
-									<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-									<p>Here is some more information about this product that is only revealed once clicked on.</p>
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
 								</div>
 							</li>
 							<li class="card design01 z-depth-2">
 								<div class="card-image waves-effect waves-block waves-light">
-									<img class="activator" src="/images/profilePix.jpg">
+								  <img class="activator" src="/images/profilePix.jpg">
 								</div>
 								<div class="card-content">
-									<p class="name center-align">Jane Doe</p>
-									<p class="job center-align">Designer</p>
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
 								</div>
 								<div class="card-reveal">
-									<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-									<p>Here is some more information about this product that is only revealed once clicked on.</p>
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
 								</div>
 							</li>
 							<li class="card design01 z-depth-2">
 								<div class="card-image waves-effect waves-block waves-light">
-									<img class="activator" src="/images/profilePix.jpg">
+								  <img class="activator" src="/images/profilePix.jpg">
 								</div>
 								<div class="card-content">
-									<p class="name center-align">Jane Doe</p>
-									<p class="job center-align">Designer</p>
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
 								</div>
 								<div class="card-reveal">
-									<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-									<p>Here is some more information about this product that is only revealed once clicked on.</p>
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
 								</div>
 							</li>
 							<li class="card design01 z-depth-2">
 								<div class="card-image waves-effect waves-block waves-light">
-									<img class="activator" src="/images/profilePix.jpg">
+								  <img class="activator" src="/images/profilePix.jpg">
 								</div>
 								<div class="card-content">
-									<p class="name center-align">Jane Doe</p>
-									<p class="job center-align">Designer</p>
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
 								</div>
 								<div class="card-reveal">
-									<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-									<p>Here is some more information about this product that is only revealed once clicked on.</p>
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
 								</div>
 							</li>
 							<li class="card design01 z-depth-2">
 								<div class="card-image waves-effect waves-block waves-light">
-									<img class="activator" src="/images/profilePix.jpg">
+								  <img class="activator" src="/images/profilePix.jpg">
 								</div>
 								<div class="card-content">
-									<p class="name center-align">Jane Doe</p>
-									<p class="job center-align">Designer</p>
+								  <p class="name center-align">Jane Doe</p>
+								  <p class="job center-align">Designer</p>
 								</div>
 								<div class="card-reveal">
-									<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-									<p>Here is some more information about this product that is only revealed once clicked on.</p>
+								  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+								  <p>Here is some more information about this product that is only revealed once clicked on.</p>
 								</div>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="location pb0 lh0">
-			<h2>Location</h2>
-			<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=hobart%20commercial%20center%20zabarte%20road&key=AIzaSyD2i_ONq7PGYUam88owkBh3nt2IQBUpjUk" allowfullscreen></iframe>
 		</section>
 	</main>
 	<footer>
