--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 		</section>
 		<div class="parallax-container">
 			<div class="parallax black-bg">
-				<img class="opac07" src="/images/pic13.jpg" alt="">
+				<img class="opac07" src="/images/pic08.jpg" alt="">
 			</div>
 			<div class="parralax-text">
 				<div class="text-container">
@@ -348,6 +348,36 @@
 				</div>
 			</div>
 		</section>
+		<div class="parallax-container">
+			<div class="parallax black-bg">
+				<img class="opac07" src="/images/pic13.jpg" alt="">
+			</div>
+			<div class="parralax-text">
+				<div class="text-container">
+					<h3 class="title">The relationship between a client must be 'we.'</h2>
+					<p>Billy Baldwin</p>
+				</div>
+			</div>
+		</div>
+		<section class="location pb0 lh0">
+			<h2>Our Clients</h2>
+			<div class="container">
+				<div class="row">
+					<div class="col s12">
+						<ul class="client-slider">
+							<li><img src="images/customers/img01.jpg" alt=""></li>
+							<li><img src="images/customers/img02.png" alt=""></li>
+							<li><img src="images/customers/img03.png" alt=""></li>
+							<li><img src="images/customers/img04.png" alt=""></li>
+							<li><img src="images/customers/img05.jpg" alt=""></li>
+							<li><img src="images/customers/img06.png" alt=""></li>
+							<li><img src="images/customers/img07.png" alt=""></li>
+							<li><img src="images/customers/img08.png" alt=""></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="location pb0 lh0">
 			<h2>Location</h2>
 			<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=hobart%20commercial%20center%20zabarte%20road&key=AIzaSyD2i_ONq7PGYUam88owkBh3nt2IQBUpjUk" allowfullscreen></iframe>
@@ -402,6 +432,7 @@
 	<script type="text/javascript" src="/plugins/slick/slick.js"></script>
 	<script type="text/javascript" src="/plugins/materialize-css/dist/js/materialize.min.js"></script>
 	<script type="text/javascript" src="/plugins/masonry-layout/dist/masonry.pkgd.min.js"></script>
+	<script type="text/javascript" src="/plugins/masonry-layout/imagesloaded.pkgd.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
 	<script type="text/javascript" src="/js/main.js"></script>
 
